--- a/mcsv-cours/pom.xml
+++ b/mcsv-cours/pom.xml
@@ -3,10 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.7.16</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<groupId>org.example</groupId>
+		<artifactId>mcsv-kubernates</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 	<groupId>org.springcloud.mcsv.cours</groupId>
 	<artifactId>mcsv-cours</artifactId>
