--- a/mcsv-cours/src/main/resources/application.properties
+++ b/mcsv-cours/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.application.name="mcsv-cours"
+server.port=8082
 
+spring.datasource.url=jdbc:postgresql://localhost:5433/mcsv_project6_cours
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
+spring.jpa.hibernate.ddl-auto=update
+logging.level.org.hibernate.SQL=debug
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
