dockerizing mcsv-cours

--- a/mcsv-cours/Dockerfile
+++ b/mcsv-cours/Dockerfile
@@ -1,21 +1,22 @@
 FROM openjdk:18-jdk-alpine as builder
 
-WORKDIR /app/mcsv-users
+WORKDIR /app/mcsv-cours
 
 # Copy the pom.xml file to download dependencies
 COPY ./pom.xml /app
 # Copy the complete project in the container
-COPY ./mcsv-users/.mvn ./.mvn
+COPY ./mcsv-cours/.mvn ./.mvn
 #we need to copy the mvnw file to save the cache of maven
-COPY ./mcsv-users/mvnw .
+COPY ./mcsv-cours/mvnw .
 #we copy the file pom to download the dependencies
-COPY ./mcsv-users/pom.xml .
+COPY ./mcsv-cours/pom.xml .
 
 #skip test and ejecution in each build and delete the target folder
-RUN ./mvnw clean package -Dmaven.test.skip -Dmaven.main.skip -Dspring-boot.repackage.skip && rm -r ./target/
+#RUN ./mvnw clean package -Dmaven.test.skip -Dmaven.main.skip -Dspring-boot.repackage.skip && rm -r ./target/
+RUN ./mvnw dependency:go-offline
 
 # Copy the complete project in the container
-COPY ./mcsv-users/src ./src
+COPY ./mcsv-cours/src ./src
 
 #we run the maven command to download the dependencies and run project
 RUN ./mvnw clean package -DskipTests
@@ -29,10 +30,10 @@ WORKDIR /app
 #we create a directory to save the logs of spring boot
 RUN mkdir ./logs
 
-COPY --from=builder /app/mcsv-users/target/mcsv-users-0.0.1-SNAPSHOT.jar .
+COPY --from=builder /app/mcsv-cours/target/mcsv-cours-0.0.1-SNAPSHOT.jar .
 
 # Run the jar file with port
-EXPOSE 8081
+EXPOSE 8082
 
 #ENTRYPOINT ["java", "-jar", "mcsv-users-0.0.1-SNAPSHOT.jar"]
-CMD ["java", "-jar", "mcsv-users-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "mcsv-cours-0.0.1-SNAPSHOT.jar"]
