--- a/mcsv-users/src/main/resources/application.properties
+++ b/mcsv-users/src/main/resources/application.properties
@@ -8,3 +8,6 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
+
+#config to save files in the container
+loggin.file.path=/app/logs
