change uri in feing clients

--- a/mcsv-cours/src/main/resources/application.properties
+++ b/mcsv-cours/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name="mcsv-cours"
+spring.application.name=mcsv-cours
 server.port=8082
 
 spring.datasource.url=jdbc:postgresql://host.docker.internal:5433/mcsv_project6_cours
