add new ports in properties in the projects

--- a/mcsv-cours/src/main/resources/application.properties
+++ b/mcsv-cours/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=mcsv-cours
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://host.docker.internal:5433/mcsv_project6_cours
+spring.datasource.url=jdbc:postgresql://postgres14:5432/mcsv_project6_cours
 spring.datasource.username=postgres
 spring.datasource.password=1234
 spring.datasource.driver-class-name=org.postgresql.Driver
