--- a/mcsv-users/src/main/resources/application.properties
+++ b/mcsv-users/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=mcsv-users
 server.port=8081
 
-spring.datasource.url=jdbc:mysql://host.docker.internal:3306/courses_mcsv_pro6_kubernates_11
+spring.datasource.url=jdbc:mysql://mysql8:3306/courses_mcsv_pro6_kubernates_11
 spring.datasource.username=root
 spring.datasource.password=1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
