--- a/mcsv-cours/src/main/resources/application.properties
+++ b/mcsv-cours/src/main/resources/application.properties
@@ -1,12 +1,14 @@
 spring.application.name=mcsv-cours
 server.port=8082
 
-spring.datasource.url=jdbc:postgresql://postgres14:5432/mcsv_project6_cours
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://${DB_HOST:postgres14:5432}/${DB_DATABASE:mcsv_project6_cours}
+spring.datasource.username=${DB_USERNAME:postgres}
+spring.datasource.password=${DB_PASSWORD:1234}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=debug
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+mcsv.users.url=${USERS_URL:users-mcsv-container:8081}
