--- a/mcsv-users/src/main/resources/application.properties
+++ b/mcsv-users/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=mcsv-users
-server.port=8081
+#port to run the app
+server.port=${PORT:8081}
 
-spring.datasource.url=jdbc:mysql://mysql8:3306/courses_mcsv_pro6_kubernates_11
-spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.url=jdbc:mysql://${DB_HOST:mysql8:3306}/${DB_DATABASE:courses_mcsv_pro6_kubernates_11}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD:1234}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
@@ -11,3 +12,5 @@ logging.level.org.hibernate.SQL=debug
 
 #config to save files in the container
 loggin.file.path=/app/logs
+
+mcsv.cours.url=${COURS_URL:cours-mcsv-container:8082}
