--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,11 +31,12 @@ services:
   #container 1
   users-mcsv-container:
     container_name: users-mcsv-container
-    #image: mcsv-users
+    #download the image from docker hub
+    image: daniella03/users-mcsv
     #we construct the image from the Dockerfile
-    build:
-      context: ./
-      dockerfile: ./mcsv-users/Dockerfile
+    #build:
+     # context: ./
+      #dockerfile: ./mcsv-users/Dockerfile
     ports:
       - "8081:8081"
     env_file: .\mcsv-users\.env
@@ -48,11 +49,11 @@ services:
   #container 2
   cours-mcsv-container:
     container_name: cours-mcsv-container
-    #image: mcsv-cours
+    image: daniella03/cours-mcsv
     #we construct the image from the Dockerfile
-    build:
-      context: ./
-      dockerfile: ./mcsv-cours/Dockerfile
+    #build:
+     # context: ./
+      #dockerfile: ./mcsv-cours/Dockerfile
     ports:
       - "8082:8082"
     env_file: .\mcsv-cours\.env
